--- a/Objetivos Prioritarios/Views/Objetivo/ObjetivosListPartial.cshtml
+++ b/Objetivos Prioritarios/Views/Objetivo/ObjetivosListPartial.cshtml
@@ -101,7 +101,12 @@
             orderable: true,
             IsFiltered: false
         },
-
+        {
+            title: "Fotografía",
+            data: "TieneFoto",
+            orderable: true,
+            IsFiltered: false
+        },
        
 
         {
@@ -130,7 +135,7 @@
 
     function FillGrid(estado = null) {
 
-
+        debugger;
 
         $.ajax({
             type: 'POST',
@@ -138,6 +143,7 @@
             data: { active: @Json.Encode(ViewBag.Actives)},
 
             success: function (data) {
+                debugger;
                 if ($.fn.dataTable.isDataTable('#generalDataTable')) {
                     $('#generalDataTable').DataTable().clear().destroy();
                 }
